src/test/resources/purescript_examples/failing/ImportExplicit.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith UnknownImport\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('M1')
          PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('X')
          PsiElement(()('(')
          PsiElement(..)('..')
          PsiElement())(')')
        PsiElement())(')')
        PsiElement(whitespace)('\n')
